basic html tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1>My page heading </h1>
+    <h3>level 3</h3>
+    <p>Some paragraph text</p>
+    <a href="https://www.msn.com/en-in/money?ocid=msedgntphdr&cvid=03ad2dc4f0034543becddcf3fd0f2532&id=ahkucw">this is
+        link</a>
+        <img src="ds.png" alt="">
+        <img src="https://th.bing.com/th/id/OIP.yB68_QIWx1TkGyUP0moPwAHaFj?w=230&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
 </body>
+
 </html>
