--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         link</a>
         <img src="ds.png" alt="">
         <img src="https://th.bing.com/th/id/OIP.yB68_QIWx1TkGyUP0moPwAHaFj?w=230&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="">
-</body>
+        <ol >
+            <li>apple</li>
+            <li>banana</li>
+            <li>grapes</li>
+            <li>guava</li>
+        </ol>
+        <ul>
+            <li>lion</li>
+            <li>tiger</li>
+            <li>elephant</li>
+            <li>wolf</li>
+        </ul>
+        <video controls src="https://www.boat-lifestyle.com/cdn/shop/files/quinn_ecywdgk2php34go30fyob4m1.mp4#t=0.1"></video>
+
 
 </html>
